--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
@@ -26,7 +26,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "4.0.2",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@capacitor/cli": "5.0.4",
